# tools

./: PIPELINE.md  README.md  TEI_MAPPING.md  alignment.py  args_check.py  check_participants.py  cli.py  config.py  conllu2wip.py  data.py  dataflags.py  eaf2csv.py  generate_artifacts.py  generate_registry_draft.py  generate_validation_report.py  jefferson_feats.py  linear2html.py  make_patch.py  merge_metadata.py  normalize.py  pyproject.toml  serialize.py  sync.py  tokens.py  translate_metadata.py  tsv2chat_bak.py  tsv2eaf.py  tsv2formats.py  tsv2tei.py  tsv2vert.py  tsv2vert_v2.py  validate_csv.py
.github/workflows/: notify-docs-site.yml
configs/: KIP.yml  KIPasti.yml  ParlaBO.yml  ParlaBZ.yml  ParlaTO.yml  StraParlaBO.yml  StraParlaTO.yml  defaults.yml
demo/: BOA1001.csv  BOA1001.eaf  BOA1001.json  BOA1001.roundtrip.eaf  BOA1001.vert.tsv  demo.py
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: changelog.adoc  index.adoc  normalize.adoc  scripts.adoc  testing.adoc  validation-errors.adoc  validation-log.adoc  validation-report.adoc  workflows.adoc
linear-jefferson/: BOC1005.txt  BOD2006.txt
linear-orthographic/: BOC1005.txt  BOD2006.txt
tests/: conftest.py  test_config.py  test_data.py  test_dataflags.py  test_eaf2csv.py  test_make_patch.py  test_merge_metadata.py  test_normalize.py  test_serialize.py  test_tokenize.py  test_tsv2eaf.py  test_tsv2formats.py  test_vert2eaf.py
